feat: Implement role-based access control for timesheet management
- Added a method to reject access for system admins in TimeSheetService.
- Updated UserRoleRepository to include methods for fetching user roles with permissions and system admin users.
- Enhanced UserRoleService to enforce role assignment rules, ensuring only one system admin and proper role assignments.
- Modified application properties to enable Flyway validation on migration.
- Updated SQL migration scripts to change admin email and implement project RBAC roles.
- Added triggers and functions to enforce project membership and system admin cardinality.
- Tightened system admin scope by removing unnecessary permissions.
- Ensured global roles are limited to ADMIN and MEMBER only.